fixes overlapping footer on mobile

--- a/css/main.prefixed.css
+++ b/css/main.prefixed.css
@@ -2254,7 +2254,7 @@ h2 {
 
 .main-footer__links {
   list-style: none;
-  padding: 0;
+  margin-left: 0;
 }
 .main-footer__links li, .main-footer__links h1, .main-footer__links h2, .main-footer__links h3 {
   line-height: 28px;
