--- a/scss/theme/_landing.scss
+++ b/scss/theme/_landing.scss
@@ -128,7 +128,7 @@
 
 .main-footer__links {
 	list-style: none;
-	padding: 0;
+	margin-left: 0;
 
 	li, h1, h2, h3 {
 		line-height: 1.75*$base-font-size;
